refactor: use List.of() instead